WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183404
[GTK][WPE] Leak checker is not working in WebKitGLib web process tests
https://bugs.webkit.org/show_bug.cgi?id=183404
Summary
[GTK][WPE] Leak checker is not working in WebKitGLib web process tests
Carlos Garcia Campos
Reported
2018-03-07 04:20:48 PST
This might have regressed when we started to use the JSC garbage collector timers. The thing is that we expect that the WebProcessTester object that we expose to JavaScript is released when the web frame is destroyed, but that's no longer the case. On window object cleared a GC is scheduled, but JSC timers do the actual garbage collection later. In the case of tests that never happens because the web process finishes quickly after the test. We need to force a garbage collection at some point when the web page is destroyed.
Attachments
Patch
(26.08 KB, patch)
2018-03-07 04:34 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-03-07 04:34:52 PST
Created
attachment 335184
[details]
Patch
EWS Watchlist
Comment 2
2018-03-07 04:36:36 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2018-03-07 22:34:48 PST
Committed
r229395
: <
https://trac.webkit.org/changeset/229395
>
Radar WebKit Bug Importer
Comment 4
2018-03-07 22:35:46 PST
<
rdar://problem/38250675
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug