Tools/TestWebKitAPI/Tests/WebKitGLib/FrameTest.cpp
@@ -31,7 +31,6 @@ private:
     {
         WebKitFrame* frame = webkit_web_page_get_main_frame(page);
         g_assert(WEBKIT_IS_FRAME(frame));
-        assertObjectIsDeletedWhenTestFinishes(G_OBJECT(frame));
         g_assert(webkit_frame_is_main_frame(frame));
 
         return true;
@@ -41,7 +40,6 @@ private:
     {
         WebKitFrame* frame = webkit_web_page_get_main_frame(page);
         g_assert(WEBKIT_IS_FRAME(frame));
-        assertObjectIsDeletedWhenTestFinishes(G_OBJECT(frame));
         g_assert_cmpstr(webkit_web_page_get_uri(page), ==, webkit_frame_get_uri(frame));
 
         return true;
@@ -51,7 +49,6 @@ private:
     {
         WebKitFrame* frame = webkit_web_page_get_main_frame(page);
         g_assert(WEBKIT_IS_FRAME(frame));
-        assertObjectIsDeletedWhenTestFinishes(G_OBJECT(frame));
         g_assert(webkit_frame_get_javascript_global_context(frame));
 
         return true;
